--- a/assets/style.css
+++ b/assets/style.css
@@ -27,13 +27,13 @@ header {
 }
 footer {
     width: 100%;
-    height: 120px;
-    padding: 80px;
+    height: 60px;
+    padding: 20px;
     text-align: center;
     word-spacing:50px;
     letter-spacing:10px;
     font-family:cursive;
-    font-size:45px;
+    font-size:35px;
     color: white;
     background-color:steelblue;
 }
@@ -49,6 +49,7 @@ h2 {
 h3 {
     margin-left: 200px;
     text-align: left;
+    padding-top: 10px;
     color:teal;
     font-family:cursive;
     font-size: 30px;
@@ -59,10 +60,14 @@ h4 {
 }
 
 img {
- max-width: 100%;
- height: auto;
+ max-width: 50%;
+ max-width: 50%;
  margin-left: auto;
  margin-right: auto;
+ padding:10px;
+ display: block;
+ border: 1px solid #ddd;
+ border-radius: 8px;
 
 }
 
